objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Group_Member__c</fullName>
        <label>Buying_Group_Member</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ace Canada</fullName>
                </value>
                <value>
                    <fullName>BrandSource</fullName>
                </value>
                <value>
                    <fullName>Cantrex</fullName>
                </value>
                <value>
                    <fullName>Do-It-Best</fullName>
                </value>
                <value>
                    <fullName>Emery Jensen</fullName>
                </value>
                <value>
                    <fullName>Home Hardware</fullName>
                </value>
                <value>
                    <fullName>Loblaws</fullName>
                </value>
                <value>
                    <fullName>Mid States</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Orgil</fullName>
                </value>
                <value>
                    <fullName>Rona Canada</fullName>
                </value>
                <value>
                    <fullName>True Value</fullName>
                </value>
                <value>
                    <fullName>United Hardware</fullName>
                </value>
                <value>
                    <fullName>Wheat Belt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Customer_Id__c</fullName>
        <label>CC_Customer_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CORE_Prospective__c</fullName>
        <formula>HYPERLINK(&quot;/lighnting/cmp/LC103_RedirecttoProspective?c__recordid=&quot;+Id,&quot;Go to Prospective&quot;, &apos;_blank&apos; )</formula>
        <label>Prospective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <displayFormat>JN-{0000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_app_user_id__c</fullName>
        <externalId>true</externalId>
        <label>original_app_user_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>RK_SysAdmin</fullName>
        <active>true</active>
        <label>RK_SysAdmin</label>
    </recordTypes>
    <recordTypes>
        <fullName>RK_SysAdminFinal</fullName>
        <active>true</active>
        <label>RK_SysAdminFinal</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMD</fullName>
        <active>true</active>
        <label>RMD</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ACC_Phone</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISBLANK(Phone), ISPICKVAL(Ownership, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Phone and Ownership Cannot be Null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACC_Rating</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(Rating, &apos;Hot&apos;), true, false)</errorConditionFormula>
        <errorMessage>Account Rating cannot be Hot</errorMessage>
    </validationRules>
</CustomObject>